2005-11-01  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/lockdownwindow.py:
	* lib/sources/gconfsource.py:
	Update to use the latest pessulus lockdownapplier, but don't
	actually use pessulus yet.

2005-10-28  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/lockdownwindow.py:
	* admin-tool/Makefile.am:
	New lockdown window.
	Simple initial version, using an applier abstraction so that we
	can plug in Pessulus later.
	
	* lib/userprofile.py:
	Add get_mandatory method to ProfileChange
	
	* admin-tool/sessionwindow.py:
	Use the lockdown window.
	Add changed parameter to changed signal of change model
	Add find method for chage model
	Get mandatory setting from change event if set
	
	* admin-tool/changeswindow.py:
	Emit changed when changing the mandatory setting of a change
	
	* lib/sources/gconfsource.py:
	Add gconf helper for lockdown settings

2005-10-27  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/sessionwindow.py:
	* lib/sources/filessource.py:
	* lib/userprofile.py:
	Make backup files be marked ignore by default.

2005-10-27  Alexander Larsson  <alexl@redhat.com>

	* README:
	Add comment about gconf 2.12.1 requirement for enforce mandatory
	
	* admin-tool/sabayon.desktop.in:
	Better name
	
	* admin-tool/changeswindow.py:
	* admin-tool/editorwindow.py:
	* admin-tool/fileviewer.py:
	* admin-tool/gconfviewer.py:
	* admin-tool/sabayon.glade:
	* admin-tool/sessionwindow.py:
	* admin-tool/usersdialog.py:
	* lib/protosession.py:
	Better window titles

2005-10-27  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/sabayon-apply:
	Add -s argument to mean "nested sabayon session"
	
	* admin-tool/sessionwindow.py:
	Add Enforce mandatory toggle menu item. You can use
	this to edit a settting that you earlier set as mandatory.
	
	* lib/config.py.in:
	Ignore directory .gconf.xml.mandatory-alt
	
	* lib/protosession.py:
	Pass -s to apply tool
	
	* lib/sources/filessource.py:
	* lib/sources/mozillasource.py:
	* lib/sources/paneldelegate.py: