@@ -1,5 +1,15 @@
 2005-11-01  Alexander Larsson  <alexl@redhat.com>
 
+	* lib/userprofile.py:
+	Start monitory delegates after sources, needed because
+	the panel delegate needs the gconf source to initialize
+	the gconf path file.
+	
+	* lib/sources/paneldelegate.py:
+	Handle files added when you add panel launchers.
+
+2005-11-01  Alexander Larsson  <alexl@redhat.com>
+
 	* admin-tool/lockdownwindow.py:
 	* lib/sources/gconfsource.py:
 	Update to use the latest pessulus lockdownapplier, but don't
